# adeqt

./: LICENSE  README.md  adeqt.py  pyproject.toml  test_adeqt.py
.github/workflows/: release.yml  test.yml
